--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,12 +45,14 @@
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: #ddfe32;
+    color: #ffeeaa;
+    font-weight: 600;
 }
 
 
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: #ffffff;
+  color: #ffeeaa80;
+  font-weight: 600;
 }
 
 .nav-link-special {
@@ -62,7 +64,7 @@
 }
 
 .nav-link-special:hover {
-    color: #ddfe32;
+    color: #252525;
     font-weight: 500;
 }
 
@@ -72,7 +74,7 @@
   }
 
 .navbar-dark .navbar-brand {
-    color: #ddfe32;
+    color: #252525;
     font-family: 'martel-bold', sans-serif;
     font-size: clamp(10px, 1.7vw, 30px);
     margin-left: 6%;
@@ -164,7 +166,7 @@
 }
 
 .progress-bar {
-    background-color: #acd051;
+    background-color: #ffeeaa;
 }
 
 .icons-container {
@@ -199,7 +201,7 @@
     'GRAD' 0,
     'opsz' 48;
     font-size: clamp(100px, 1.7vw, 50px);
-    color: rgb(104 132 34);
+    color: #ffeeaa;
     vertical-align: middle;
     display: inline-block;
 }
@@ -230,7 +232,7 @@
     'GRAD' 0,
     'opsz' 48;
     font-size: 30px;
-    color: rgb(137, 163, 52);
+    color: #ffeeaa;
     vertical-align: middle;
     display: inline-block;
 }
@@ -252,7 +254,7 @@
     font-weight: 600;
     font-style: italic;
     font-size: 10px;
-    color: #6e8923;
+    color: #ffeeaa;
 }
 
 .subtitle {
@@ -320,7 +322,7 @@
 }
 
 .blog-label-link:hover {
-  color: #acd051;
+  color: #ffeeaa;
 }
 
 /* Sections*/
@@ -332,7 +334,7 @@
 }
 
 .colored-section {
-    background-color: #121409;
+    background-color: #252525;
     /* height: 100vh; */
     align-items: center;
     margin:auto;
@@ -340,8 +342,8 @@
 
 .btn-secondary {
   color: #fff;
-  background-color: #121409;
-  border-color: #121409;
+  background-color: #252525;
+  border-color: #252525;
 }
 
 /* Form */
@@ -388,7 +390,7 @@
 
 .form-control:focus {
     border-color: #f5deb3;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #f5deb3;;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #ffeeaa;;
 }
 
 .submit-container {
@@ -400,7 +402,7 @@
 }
 
 .contact-form .button-1 {
-  background-color: #f8c464;
+  background-color: #ffeeaa;
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
@@ -484,7 +486,7 @@
 
 
 .footer-section {
-    background-color: #121409;
+    background-color: #252525;
     display: flex;
     flex-direction: column;
 }
