--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-custom navbar-expand-lg bg-gray-800 navbar-dark fixed-top">
-    <a href="#"><p class="navbar-brand navbar-dark font-mono">Marco Rodrigues</p></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,7 +13,7 @@
                 <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-                <a href="https://www.medium.com/@macrodrigues" target="_blank" class="nav-link">Blog</a>
+                <a href="https://dadhalfdev.substack.com/" target="_blank" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
@@ -38,16 +37,27 @@
         <div class="about-header">
             <h1 class="about-title">About</h1>
             <div class="about-text">
-                <p>
-                    With over 4 years of engineering experience, I can tag myself as a builder. With a Masters in Nanotechnology and
-                    Microelectronics, it took me a few years to understand that the easiest and fastest way to build is with a simple
-                    laptop. Now, I am a Software Engineer passionately dedicated to Data Science, AI, and Web3 technologies. The change was
+                <p>                    
+                    With <strong>over 5 years of engineering experience</strong>, I can tag myself as a builder. With a <strong>Masters in Nanotechnology and
+                    Microelectronics</strong>, it took me a few years to understand that the easiest and fastest way to build is with a simple
+                    laptop 💻.
+                    <br>
+                    <br>
+                    I am a <strong></strong>Python Developer</strong> passionately dedicated to <strong>Data Science 📈, AI 🤖, and Web3 technologies 🌐</strong>. The change was
                     progressive, early on, I was learning Python after my working hours, then the pandemic came, and I got more time to dive
                     into it. Along the way, I landed a job that combined microelectronics and programming. And the time came, to enroll in a
                     Data Science bootcamp that equipped me with the essential skills to excel as a developer. Shortly after, an opportunity
                     arose to work as a Software Engineer in French Guiana. I packed up the essentials, and I flew to the Amazon rainforest
-                    to work as a Software Engineer at the European Spaceport. Nature gave me the breeze I needed to keep building, and being
-                    creative.
+                    to work as a <strong>Software Engineer</strong> at the <strong>European Spaceport</strong>.
+                    <br>
+                    <br>
+                    Recently, life gave me the best gift, a beautiful daughter.
+                    <br>
+                    <br>
+                    Now I'm a <strong>freelancer</strong> combining <strong>50% Parenting 👨‍🍼 50% Python, Data Science, AI, and Web3 👨‍💻</strong>.
+                    <br>
+                    <br>
+                    A true <strong style="font-size: 1.2em;">Dad Half Dev</strong>.
                 </p>
             </div>
         </div>
@@ -79,12 +89,12 @@
           <h3 class="subtitle">Find me here</h3>
           <div class="icon-about-align" style="margin-top:4%">
             <p class="p-img-icon">
-              <a href="https://www.linkedin.com/in/macrodrigues" target="_blank">
+              <a href="https://www.linkedin.com/in/dadhalfdev" target="_blank">
                 <img alt="linkedin" target="_blank" width="40x" src="static/images/icons/linkedin.svg" class="img-icon" />
               </a>
             </p>
             <p class="p-img-icon">
-              <a href="https://medium.com/@macrodrigues" target="_blank">
+              <a href="https://medium.com/@dadhalfdev" target="_blank">
                 <img alt="medium" target="_blank" width="60px" src="static/images/icons/medium.svg" class="img-icon" />
               </a>
             </p>
@@ -94,7 +104,7 @@
               </a>
             </p>
             <p class="p-img-icon">
-              <a href="https://twitter.com/marcoacavaco" target="_blank">
+              <a href="https://x.com/dadhalfdev" target="_blank">
                 <img alt="github" target="_blank" width="40px" src="static/images/icons/x_logo.svg" class="img-icon" />
               </a>
             </p>
@@ -190,138 +200,22 @@
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/ai-advances/how-to-analyse-github-development-activity-with-python-ef00157ff46d?sk=38e6cf434e1657748bf64f479c19db5f">
-              <img src="https://arweave.net/nNRCNUejkpM-p_U_a47hNZ5oEasvgNtNo4tQ7PCIhmo" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">How to Analyse GitHub Development Activity</h5>
-              <p class="small text-muted mb-0">Data manipulation techniques and data visualization to extract valuable insights from GitHub activity.</p>
-            </div>
-            <div class="project-category" style="background-color: rgba(32, 192, 144, 0.856); color: wheat">
-              <p>Data Analysis</p>
-            </div>
-          </div>
+            <div class="substack-post-embed" style="height: 500px; overflow: auto;"><p lang="en">How to Make AI Illustrated Books with Python by Marco Rodrigues</p><a data-post-link href="https://dadhalfdev.substack.com/p/how-to-make-ai-illustrated-books">Read on Substack</a></div><script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
         </div>
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/coinmonks/post3-the-ultimate-web3-newsletter-ca5f426a60d0">
-              <img src="https://arweave.net/aNYIVVY9jex5wtH8QtA9uB5fmNTfpiW-CsXwsmzpZUc" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Fully Automated Newsletter </h5>
-              <p class="small text-muted mb-0">A Web3 Newsletter and data platform to discover crypto content.</p>
-            </div>
-            <div class="project-category" style="background-color: rgba(180, 107, 5, 0.856); color: wheat">
-              <p>Automation</p>
-            </div>
-          </div>
+            <div class="substack-post-embed" style="height: 500px; overflow: auto;"><p lang="en">Easy Steps to Automate Your Posts on BlueSky with Python by Marco Rodrigues</p><a data-post-link href="https://dadhalfdev.substack.com/p/easy-steps-to-automate-your-posts">Read on Substack</a></div><script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
         </div>
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/python-in-plain-english/create-stunning-dashboards-with-flask-and-plotly-dash-56a991dea04b?sk=dee420714967d3ac1bd4726179cd8361">
-              <img src="https://arweave.net/vmQbWKD81jzRSDf9T2WgcT4YZwTm5vCdVc_O4y71G80" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Stunning Dashboards with Flask and Plotly Dash </h5>
-              <p class="small text-muted mb-0">Upload datasets and return interactive dashboards using Python, HTML, and CSS. </p>
-            </div>
-            <div class="project-category" style="background-color: rgb(30, 172, 101); color: wheat">
-              <p>Data Visualization</p>
-            </div>
-          </div>
+            <div class="substack-post-embed" style="height: 500px; overflow: auto;"><p lang="en">Make $100+ Monthly With Apify Actors by Marco Rodrigues</p><a data-post-link href="https://dadhalfdev.substack.com/p/make-100-monthly-with-apify-actors">Read on Substack</a></div><script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
         </div>
 
         <!-- Gallery item -->
         <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/python-in-plain-english/3-ways-to-scrape-infinite-scroll-websites-with-python-66b38ed66016?sk=ed351515bb36235c30b3ee54dfd30225">
-              <img src="https://arweave.net/rSwSEseQzsUmPm5RmWci-Qcj_OmMDjDa4hdv2qp8xKI" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">3 Ways to Scrape Infinite Scroll Websites with Python </h5>
-              <p class="small text-muted mb-0">Leverage the combination of Playwright scrolling functions and Beautiful Soup to deal with infinite scroll. </p>
-            </div>
-            <div class="project-category" style="background-color: rgb(30, 106, 172); color: wheat">
-              <p>Web Scraping</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://python.plainenglish.io/how-to-make-python-forms-as-a-pro-e4164f5ddcde?sk=4796504207589e681f655ac60c6fb540">
-              <img src="https://arweave.net/4MPRb7Mtphzr_vhFGaxYNY4B7gT4FAWQO2h7yzK5yeU" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Learn How to Make Advanced Python Forms</h5>
-              <p class="small text-muted mb-0">Use Flask-WTF and Jinja to build forms that can be used for the most diverse applications.</p>
-            </div>
-            <div class="project-category" style="background-color: rgba(0, 22, 111, 0.856); color: wheat">
-              <p>Web Development</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/python-in-plain-english/combine-playwright-with-beautiful-soup-to-scrape-websites-5fa077a55571?sk=2143f0efb8ff7ef89e4ddd40f30a41b3">
-              <img src="https://arweave.net/sjekcGsnp-86n7ziHxZjLuSjK94POilhXbUAmj2lSxU" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Combine Playwright with Beautiful Soup to Scrape Websites </h5>
-              <p class="small text-muted mb-0">Web scrape data from JavaScript-rendered websites by using Python.</p>
-            </div>
-            <div class="project-category" style="background-color: rgb(30, 106, 172); color: wheat">
-              <p>Web Scraping</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/ai-in-plain-english/langchain-and-pinecone-unpack-crypto-news-with-openai-and-hugging-face-models-838c1e858bb6?sk=b16d61740cd91adabdf9d4fb410c91d0">
-              <img src="https://arweave.net/9jfgesNA1a3tiIQXBi7ZVMlPTRaiahg6pgt5QI3yw-s" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">Langchain and Pinecone: Unpack Crypto News with OpenAI and Hugging Face</h5>
-              <p class="small text-muted mb-0">Use Langchain and Pinecone to feed LLMs from Hugging Face and OpenAI.</p>
-            </div>
-            <div class="project-category" style="background-color: rgba(136, 32, 192, 0.856); color: wheat">
-              <p>Prompt Engineering</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-          <div class="bg-white rounded shadow-sm">
-            <a
-              href="https://medium.com/datadriveninvestor/iot-on-the-move-how-connected-devices-are-preventing-transportation-risks-a9117333cd73">
-              <img src="https://arweave.net/wAqOpm_NOPPXU2rycsRPkerUWaYCPrT-L8AeDunJ3BI" target="_blank" alt="" class="img-fluid card-img-top">
-            </a>
-            <div class="p-4">
-              <h5 class="title-img-gallery">IoT on the Move: How Connected Devices are Preventing Transportation Risks</h5>
-              <p class="small text-muted mb-0">Transport Risk Mitigation through Exploratory Data Analysis and ML Models.</p>
-            </div>
-            <div class="project-category" style="background-color: rgba(192, 32, 32, 0.856); color: wheat">
-              <p>Machine Learning</p>
-            </div>
-          </div>
+            <div class="substack-post-embed" style="height: 500px; overflow: auto;"><p lang="en">How to Build a RAG for Cryptocurrency News by Marco Rodrigues</p><a data-post-link href="https://dadhalfdev.substack.com/p/how-to-build-a-rag-for-cryptocurrency">Read on Substack</a></div><script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>            
         </div>
 
         <!-- End -->
@@ -329,7 +223,7 @@
       <div class="go-to-blogs">
         <div class="blog-label">
           <button class="btn btn-secondary btn-sm">
-            <a href="https://medium.com/@macrodrigues" class="blog-label-link" target="_blank">
+            <a href="https://dadhalfdev.substack.com/" class="blog-label-link" target="_blank">
               <p>Find More</p>
             </a>
           </button>
@@ -338,7 +232,7 @@
 <div>
 
 <!--Paid Work Section-->
-<div id="work" style="background-color: #121409;">
+<div id="work" style="background-color: #252525;">
   <div class="other-header">
     <h1 class="other-title" style="color: rgb(255, 255, 255);">Paid work</h1>
   </div>
@@ -347,7 +241,7 @@
 
       <!-- Work item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+        <div class="bg-white rounded shadow-sm" style="background-color: #252525 !important;">
           <a href="https://market.oceanprotocol.com/asset/did:op:586e4f0873fb54ab9c6f81036d72953ca4e4c2d04de129b677f4c624ccf93e27">
             <img src="static/images/work/challenge_transport.webp" target="_blank" alt="" class="img-fluid card-img-top">
           </a>
@@ -363,7 +257,7 @@
 
       <!-- Work item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+        <div class="bg-white rounded shadow-sm" style="background-color: #252525 !important;">
           <a href="https://market.oceanprotocol.com/asset/did:op:7a32ff999b0e6a1c6cb44ab0d5dbca24a90b73015bcea47fde955ea71b79e154">
             <img src="static/images/work/challenge_real_estate.webp" target="_blank" alt="" class="img-fluid card-img-top">
           </a>
@@ -382,7 +276,7 @@
 
       <!-- Work item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+        <div class="bg-white rounded shadow-sm" style="background-color: #252525 !important;">
           <a
             href="https://techjury.net/blog/geo-targeting-with-proxies/">
             <img src="static/images/work/brightdata_geo.webp" target="_blank" alt=""
@@ -401,7 +295,7 @@
 
       <!-- Work item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+        <div class="bg-white rounded shadow-sm" style="background-color: #252525 !important;">
           <a href="https://techjury.net/blog/scraping-for-ecommerce/">
             <img src="static/images/work/brightdata_ecommerce.webp" target="_blank" alt="" class="img-fluid card-img-top">
           </a>
@@ -418,7 +312,7 @@
 
       <!-- Work item -->
       <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
-        <div class="bg-white rounded shadow-sm" style="background-color: #121409 !important;">
+        <div class="bg-white rounded shadow-sm" style="background-color: #252525 !important;">
           <a href="https://www.upwork.com/freelancers/~01185447baa36a1b77">
             <img src="static/images/work/upwork_image.webp" target="_blank" alt=""
               class="img-fluid card-img-top">
