--- a/templates/index.html
+++ b/templates/index.html
@@ -94,10 +94,15 @@
               </a>
             </p>
             <p class="p-img-icon">
-              <a href="https://medium.com/@dadhalfdev" target="_blank">
-                <img alt="medium" target="_blank" width="60px" src="static/images/icons/medium.svg" class="img-icon" />
+              <a href="https://dadhalfdev.substack.com/" target="_blank">
+                <img alt="substack" target="_blank" width="40px" src="static/images/icons/substack.svg" class="img-icon" />
               </a>
             </p>
+            <p class="p-img-icon">
+                <a href="https://medium.com/@dadhalfdev" target="_blank">
+                  <img alt="medium" target="_blank" width="60px" src="static/images/icons/medium.svg" class="img-icon" />
+                </a>
+              </p>
             <p class="p-img-icon">
               <a href="https://github.com/macrodrigues" target="_blank">
                 <img alt="github" target="_blank" width="40px" src="static/images/icons/github.svg" class="img-icon" />
