--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-                <a href="https://dadhalfdev.substack.com/" target="_blank" class="nav-link">Blog</a>
+                <a href="https://blog.dadhalfdev.com/" target="_blank" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
@@ -94,11 +94,6 @@
               </a>
             </p>
             <p class="p-img-icon">
-              <a href="https://dadhalfdev.substack.com/" target="_blank">
-                <img alt="substack" target="_blank" width="40px" src="static/images/icons/substack.svg" class="img-icon" />
-              </a>
-            </p>
-            <p class="p-img-icon">
                 <a href="https://medium.com/@dadhalfdev" target="_blank">
                   <img alt="medium" target="_blank" width="60px" src="static/images/icons/medium.svg" class="img-icon" />
                 </a>
@@ -111,12 +106,6 @@
             <p class="p-img-icon">
               <a href="https://x.com/dadhalfdev" target="_blank">
                 <img alt="github" target="_blank" width="40px" src="static/images/icons/x_logo.svg" class="img-icon" />
-              </a>
-            </p>
-            <p class="p-img-icon">
-            <p class="p-img-icon" style="padding: 0; margin-bottom: 2.5%; margin-left: -3%;">
-              <a target="_blank" href="https://www.zaask.pt/user/marcoacrodrigues" >
-                <img src="https://www.zaask.pt/widget?user=793189&widget=pro-since" alt="" style="width: 45px;"/>
               </a>
             </p>
             </p>
@@ -228,7 +217,7 @@
       <div class="go-to-blogs">
         <div class="blog-label">
           <button class="btn btn-secondary btn-sm">
-            <a href="https://dadhalfdev.substack.com/" class="blog-label-link" target="_blank">
+            <a href="https://blog.dadhalfdev.com/" class="blog-label-link" target="_blank">
               <p>Find More</p>
             </a>
           </button>
